Fixed chat overflow on explanation page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 #game-chat .messages{
